Try to use better garbage collectors if available